Propagate error code of kern_execve() to the caller properly.

PR:		81670
Submitted by:	Andrew Bliznak <andriko.b@gmail.com>
Pointy hat to:	sobomax

Former-commit-id: 09aee88ba9277c25af55ee6f5140ea358189aa1e